# anagrep

./: README  anagrep.cabal
.github/workflows/: main.yml
Text/Regex/: Anagram.hs
Text/Regex/Anagram/: Bits.hs  Compile.hs  Matrix.hs  Optimize.hs  Parse.hs  Test.hs  Types.hs  Util.hs
src/: anagrep.hs
test/: Bench.hs  Main.hs
