cabal-version:       >=1.10
name:                anagrep
version:             0.1.0.0
synopsis:            Test strings for anagrams (permutations) of regular expressions
description:         
  Based on a regular expression, determine if any permutation of a string matches it.  For example, "lt[aeiou]*" would match all words with one 'l', one 't', and vowels (like "elate", "tail", etc.).
  Regular expression parsing is based on regex-tdfa and generally follows those semantics, but not all regular expression features are supported.  For example, applying modifiers to alternatives (such as "(abc|def)*") will not work.
  Efficiency is the goal, but this problem is inherently expontential.
license:             BSD3
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2020, Dylan Simon
category:            Text
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/dylex/anagrep

library
  exposed-modules:
    Text.Regex.Anagram
  build-depends:       
    base < 5,
    containers,
    regex-tdfa,
    case-insensitive
  default-language:    Haskell2010
  ghc-options: -Wall

executable anagrep
  hs-source-dirs: src
  main-is:  anagrep.hs
  build-depends:       
    base < 5,
    anagrep,
    bytestring,
    case-insensitive
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:  Main.hs
  build-depends:
    base < 5,
    anagrep,
    hspec,
    QuickCheck
  default-language:    Haskell2010
  ghc-options: -Wall
